# suggestion_nlp

./: README.md  errors.py  main.py  pyproject.toml  requirements.txt
data/: keyword_extractor.py
model/: keyword_extractor.py
service/: keyword_extractor.py
test/unit/service/: test_keyword_extractor.py
web/: keyword_extractor.py
