[project]
name = "suggetion-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jieba>=0.42.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "uvicorn>=0.35.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
